# ChangeLog for dev-erlang/faxien-launcher
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Oct 2010; Dean Matzkov <bapabooiee@gmail.com>
  faxien-launcher-0.3.7.ebuild:
  Fixed up the ebuild and made is much more proper
