@@ -1,2 +1,3 @@
 DIST faxien-launcher-0.3.7.py 12687 RMD160 a7c1e0144b63f8d1af927a5f448c6620d84ba407 SHA1 e5d7e7409dc229dd52126d47c1baf3e4b3473105 SHA256 f5135d22cb2623edf8b5843dab633998e2ee8e15ea6a515d06c95e444f208855
-EBUILD faxien-launcher-0.3.7.ebuild 346 RMD160 4094961fc881de07897b292807a4927d5b1ed556 SHA1 cf6aa8dc114c3f06d6dc4c7f0e4f728e45a2e494 SHA256 e2b9e83a0454dba0a030e76fce103e8163b3c6733d9cbb717a8541a49470987a
+EBUILD faxien-launcher-0.3.7.ebuild 365 RMD160 34704551a9df2c18296badefa158da1718ef9bfe SHA1 b37744bac3abfd3f42495568f4b93d4d18debac8 SHA256 14d896cac35413c219fc255dbdc9d1d24b5c187cfedc669a3e91e806b7cd5ffc
+MISC ChangeLog 362 RMD160 efcfe0761d4af7024731e591df0ce77ef2f32127 SHA1 3180fbef38ad9f07013d4d699a0d53c080418fa5 SHA256 9af44d89c010e836883cfbc466cf4f31953e4abd8355b03d432ff9d3646996b5
