@@ -1,6 +1,10 @@
 # ChangeLog for dev-erlang/faxien-launcher
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 Feb 2011; Dean Matzkov <bapabooiee@gmail.com>
+  faxien-launcher-0.3.7.ebuild:
+  Minor fixups.
 
   14 Oct 2010; Dean Matzkov <bapabooiee@gmail.com>
   faxien-launcher-0.3.7.ebuild:
